[gd_scene load_steps=8 format=3 uid="uid://bhat36nkbjq8x"]

[ext_resource type="Script" path="res://objects/UI/menu/Menu.gd" id="1_kn0lg"]
[ext_resource type="Texture2D" uid="uid://cc24peidqunx1" path="res://assets/ui/Новый проект.png" id="1_ngr51"]
[ext_resource type="Texture2D" uid="uid://bb74vnvbwov8p" path="res://assets/getimg_ai-2024-06-30T14_03_38.725Z.png" id="2_cc8v1"]
[ext_resource type="FontFile" uid="uid://b7hwih841orpm" path="res://arcadeclassic/ARCADECLASSIC.TTF" id="2_thfhe"]
[ext_resource type="Texture2D" uid="uid://cjo7yihnp3cgm" path="res://assets/raw/pirate_shield.png" id="5_q64hp"]
[ext_resource type="Texture2D" uid="uid://biyykmicrasps" path="res://assets/note_on.png" id="6_buxif"]
[ext_resource type="AudioStream" uid="uid://br22vchek6daj" path="res://assets/ui/dread-pirate-roberts-sea-shanty-dance-edm-soundtrack-153022.mp3" id="7_wq5mp"]

[node name="Menu" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 100
layout_mode = 0
offset_left = 478.0
offset_top = 312.0
offset_right = 790.0
offset_bottom = 632.0
scale = Vector2(0.72, 0.640001)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
z_index = 100
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
z_index = 100
layout_mode = 2
focus_mode = 0
text = "
"
icon = ExtResource("1_ngr51")
flat = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Play"]
z_index = 100
layout_mode = 0
offset_left = 48.6111
offset_top = 21.875
offset_right = 268.611
offset_bottom = 123.875
theme_override_fonts/font = ExtResource("2_thfhe")
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
z_index = 100
layout_mode = 2
focus_mode = 0
text = "

"
icon = ExtResource("1_ngr51")
flat = true
script = ExtResource("1_kn0lg")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Exit"]
z_index = 100
layout_mode = 0
offset_left = 52.7778
offset_top = 27.0623
offset_right = 272.778
offset_bottom = 129.062
theme_override_fonts/font = ExtResource("2_thfhe")
theme_override_font_sizes/font_size = 100
text = "EXIT"

[node name="PirateShield" type="Sprite2D" parent="."]
z_index = 101
position = Vector2(590, 155)
scale = Vector2(6.06944, 4.81522)
texture = ExtResource("5_q64hp")

[node name="GetimgAi-2024-06-30t140338_725z" type="Sprite2D" parent="."]
z_index = 100
position = Vector2(576.25, 326.5)
scale = Vector2(0.810042, 0.618371)
texture = ExtResource("2_cc8v1")

[node name="Note" type="Button" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = -1
anchor_right = 0.066
anchor_bottom = 0.182
offset_left = 7.0
offset_top = 535.0
offset_right = -47.032
offset_bottom = 437.064
scale = Vector2(5.75534, 5.39145)
focus_mode = 0
icon = ExtResource("6_buxif")
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wq5mp")
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 326)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="MarginContainer/VBoxContainer/Exit" method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="MarginContainer/VBoxContainer/Exit" method="_on_pressed"]
[connection signal="pressed" from="Note" to="MarginContainer/VBoxContainer/Exit" method="_on_note_pressed"]
